--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "InteractiveWhiteboard",
-  "description": "Interactive Whiteboard",
-  "repository": "https://github.com/rohan591/draw",
+  "name": " Real-Time Whiteboard",
+  "description": "Real-Time Whiteboard",
+  "repository": "https://github.com/swapnil2308/realtimewhiteboard",
   "keywords": ["node", "express", "static"]
 }
