--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "RealTime Whiteboard",
-  "description": "RealTime Whiteboard",
-  "repository": "https://github.com/swapnil2308/realtimewhiteboard",
+  "name": "InteractiveWhiteboard",
+  "description": "Interactive Whiteboard",
+  "repository": "https://github.com/rohan591/draw",
   "keywords": ["node", "express", "static"]
 }
