--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Real-Time Whiteboard",
+  "name": "InteractiveWhiteboard",
   "version": "0.0.1",
-  "description": "Real-Time Whiteboard is a realtime drawing board",
+  "description": "Realtime drawing board system",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/swapnil2308/realtimewhiteboard.git"
+    "url": "https://github.com/rohan591/draw.git"
   },
   "author": "Rohan",
   "license": "MIT",
