--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "InteractiveWhiteboard",
+  "name": "RealtimeWhiteboard",
   "version": "0.0.1",
   "description": "Realtime drawing board system",
   "main": "app.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rohan591/draw.git"
+    "url": "https://github.com/swapnil2308/realtimewhiteboard.git"
   },
   "author": "Rohan",
   "license": "MIT",
