--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "https://github.com/swapnil2308/realtimewhiteboard.git"
   },
-  "author": "Rohan",
+  "author": "swapnil2308",
   "license": "MIT",
   "dependencies": {
     "express": "3.0.x",
